--- a/public/style/style.css
+++ b/public/style/style.css
@@ -10,6 +10,7 @@ html, body {
     margin-top: 2.5%;
     text-align: center;
     border: 1px blue solid;
+    color: blue;
 }
 .user h1{
     margin-top: 10%;
@@ -70,13 +71,11 @@ html, body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .online{
-    border-top: 1px solid black;
+    border-top: 1px solid blue;
     width: 90%;
     margin-top: 5%;
     margin-left: 5%;
 }
-.online ul{
-    margin-top: 2%;
+.online_users{
     list-style: none;
-    font-size: 20px;
 }
