--- a/public/style/style.css
+++ b/public/style/style.css
@@ -69,13 +69,14 @@ html, body {
     list-style: none;
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: red;
+    margin: 2%;
+    padding: 1%;
+    height: 10%;
 }
 .online{
     border-top: 1px solid blue;
     width: 90%;
     margin-top: 5%;
     margin-left: 5%;
-}
-.online_users{
-    list-style: none;
 }
