--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,21 +1,22 @@
 html, body {
     height: 100%;
+    background-color: black;
 }
 *{margin: 0;padding: 0;box-sizing: border-box;}
 .user{
     position: absolute;
-    width: 20%;
+    width: 40%;
     height: 90%;
-    margin-left: 5%;
+    margin-left: 30%;
     margin-top: 2.5%;
     text-align: center;
-    border: 1px blue solid;
     color: blue;
     border-radius: 5px;
+    z-index: 1;
 }
 .user h1{
-    margin-top: 10%;
-    font-size: 25px;
+    margin-top:20%;
+    font-size: 30px;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -24,20 +25,31 @@ html, body {
     width: 90%;
     height: 5%;
     font-size: 20px;
-    border: 1px blue solid;
+    color: blue;
+    background-color: transparent;
+    border: 3px blue solid;
+    border-radius: 5px;
 }
 .user button{
     margin-top: 5%;
     width: 30%;
     height: 5%;
     font-size: 15px;
+    border: 2px solid blue;
+    color: blue;
+    background-color: transparent;
+    border-radius: 5px;
+    cursor: pointer;
 }
 .chat{
     position: absolute;
     width: 70%;
     height: 90%;
-    margin-left: 25%;
+    margin-left: 15%;
     margin-top: 2.5%;
+    background-color: red;
+    visibility: hidden;
+    z-index: 0;
 }
 .chat form{
     position: absolute;
@@ -92,6 +104,8 @@ html, body {
     width: 90%;
     margin-top: 5%;
     margin-left: 5%;
+    position: absolute;
+    visibility: hidden;
 }
 
 @media(max-width: 1000px){
