--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,7 +2,7 @@ html, body {
     height: 100%;
     background-color: black;
 }
-*{margin: 0;padding: 0;box-sizing: border-box;}
+*{margin: 0;padding: 0}
 .user{
     position: absolute;
     width: 40%;
@@ -15,7 +15,7 @@ html, body {
     z-index: 1;
 }
 .user h1{
-    margin-top:20%;
+    margin-top: 20%;
     font-size: 30px;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
