--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,7 +12,8 @@ html, body {
     text-align: center;
     color: blue;
     border-radius: 5px;
-    z-index: 1;
+    visibility: hidden;
+    z-index: 0;
 }
 .user h1{
     margin-top: 20%;
@@ -47,9 +48,9 @@ html, body {
     width: 80%;
     height: 90%;
     margin-left: 0%;
-    margin-top: 2.5%;
+    margin-top: 2%;
+    background-color: green;
     z-index: 0;
-    visibility: hidden;
 }
 .chat form{
     position: absolute;
@@ -59,7 +60,7 @@ html, body {
     bottom: 1px;
 }
 .chat input{
-    width: 70%;
+    width: 60%;
     height: 50%;
     border: 1px blue solid;
 }
@@ -102,11 +103,10 @@ html, body {
 .online{
     color: green;
     width: 10%;
-    margin-top: 10%;
+    margin-top: 6%;
     margin-left: 85%;
     position: absolute;
     border-bottom: 1px solid green;
-    visibility: hidden;
 }
 
 @media(max-width: 1000px){
