--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,10 +12,11 @@ html, body {
     text-align: center;
     color: blue;
     border-radius: 5px;
-    z-index: 0;
+    z-index: -1;
+    visibility: hidden;
 }
 .user h1{
-    margin-top: 20%;
+    margin-top: 30%;
     font-size: 30px;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -49,7 +50,7 @@ html, body {
     margin-left: 0%;
     margin-top: 2%;
     z-index: 0;
-    visibility: hidden;
+    background-color: red;
 }
 .chat form{
     position: absolute;
@@ -104,10 +105,20 @@ html, body {
     color: green;
     width: 10%;
     margin-top: 6%;
-    margin-left: 85%;
+    margin-left: 82%;
     position: absolute;
-    border-bottom: 1px solid green;
-    visibility: hidden;
+}
+.online span{
+    margin-left: 20px;
+    position: absolute;
+    margin-top: -7px;
+    font-size: 20px;
+}
+.ondiv{
+    width: 10px;
+    height: 10px;
+    background-color: green;
+    position: absolute;
 }
 
 @media(max-width: 1000px){
