add online ball template

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -117,6 +117,7 @@ html, body {
 .ondiv{
     width: 10px;
     height: 10px;
+    border-radius: 50%;
     background-color: green;
     position: absolute;
 }
