--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,8 +12,7 @@ html, body {
     text-align: center;
     color: blue;
     border-radius: 5px;
-    z-index: -1;
-    visibility: hidden;
+    z-index: 1;
 }
 .user h1{
     margin-top: 30%;
@@ -50,7 +49,7 @@ html, body {
     margin-left: 0%;
     margin-top: 2%;
     z-index: 0;
-    background-color: red;
+    visibility: hidden;
 }
 .chat form{
     position: absolute;
@@ -63,6 +62,7 @@ html, body {
     width: 60%;
     height: 50%;
     border: 1px blue solid;
+    border-radius: 5px;
 }
 .chat button{
     height: 50%;
@@ -74,9 +74,8 @@ html, body {
 }
 .campo_msg{
     width: 80%;
-    height: 70%;
+    height: 80%;
     margin-left: 5%;
-    margin-top: 5%;
     flex-direction: column;
     justify-content: center;
     overflow-y: scroll;
@@ -107,6 +106,7 @@ html, body {
     margin-top: 6%;
     margin-left: 82%;
     position: absolute;
+    visibility: hidden;
 }
 .online span{
     margin-left: 20px;
