--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,7 +12,8 @@ html, body {
     text-align: center;
     color: blue;
     border-radius: 5px;
-    z-index: 1;
+    z-index: -1;
+    visibility: hidden;
 }
 .user h1{
     margin-top: 30%;
@@ -48,7 +49,6 @@ html, body {
     margin-left: 0%;
     margin-top: 2%;
     z-index: 0;
-    visibility: hidden;
 }
 .chat form{
     position: absolute;
@@ -103,19 +103,20 @@ html, body {
     color: green;
     width: 10%;
     margin-top: 6%;
-    margin-left: 82%;
+    margin-left: 100%;
     position: absolute;
-    visibility: hidden;
 }
 .online span{
-    margin-left: 20px;
+    margin-left: 145px;
     position: absolute;
     margin-top: -7px;
-    font-size: 20px;
+    font-size: 50px;
 }
 .ondiv{
-    width: 10px;
-    height: 10px;
+    width: 30px;
+    height: 30px;
+    margin-top: 5px;
+    margin-left: 100px;
     border-radius: 50%;
     background-color: green;
     position: absolute;
@@ -126,10 +127,10 @@ html, body {
         height: 100%;
     }
     .chat{
-        width: 90%;
+        width: 100%;
         height: 70%;
         margin-top: 20%;
-        margin-left: 5%;
+        margin-left: 13%;
     }
     .user{
         width: 70%;
@@ -154,9 +155,10 @@ html, body {
         font-size: 30px;
     }
     .chat input{
-        width: 70%;
+        width: 79%;
         height: 40%;
         font-size: 30px;
+        margin-top: 65%;
     }
     .chat button{
         width: 20%;
@@ -166,8 +168,8 @@ html, body {
     .campo_msg{
         margin-top: 2%;
         margin-left: 5%;
-        height: 80%;
-        width: 90%;
+        height: 130%;
+        width: 100%;
     }
     .campo_msg li{
         font-size: 25px;
