--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,8 +12,7 @@ html, body {
     text-align: center;
     color: blue;
     border-radius: 5px;
-    z-index: -1;
-    visibility: hidden;
+    z-index: 1;
 }
 .user h1{
     margin-top: 30%;
@@ -49,6 +48,7 @@ html, body {
     margin-left: 0%;
     margin-top: 2%;
     z-index: 0;
+    visibility: hidden;
 }
 .chat form{
     position: absolute;
@@ -105,6 +105,7 @@ html, body {
     margin-top: 6%;
     margin-left: 100%;
     position: absolute;
+    visibility: hidden;
 }
 .online span{
     margin-left: 145px;
@@ -172,6 +173,7 @@ html, body {
         width: 100%;
     }
     .campo_msg li{
+        height: 5%;
         font-size: 25px;
         overflow-x: scroll;
     }
