--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,7 +12,8 @@ html, body {
     text-align: center;
     color: blue;
     border-radius: 5px;
-    z-index: 1;
+    z-index: -1;
+    visibility: hidden;
 }
 .user h1{
     margin-top: 30%;
@@ -48,7 +49,7 @@ html, body {
     margin-left: 0%;
     margin-top: 2%;
     z-index: 0;
-    visibility: hidden;
+    background-color: blue;
 }
 .chat form{
     position: absolute;
@@ -103,24 +104,22 @@ html, body {
     color: green;
     width: 10%;
     margin-top: 6%;
-    margin-left: 100%;
+    margin-left: 83%;
     position: absolute;
-    visibility: hidden;
 }
 .online span{
-    margin-left: 145px;
     position: absolute;
     margin-top: -7px;
-    font-size: 50px;
+    font-size: 20px;
+    margin-left: 12px;
 }
 .ondiv{
-    width: 30px;
-    height: 30px;
-    margin-top: 5px;
-    margin-left: 100px;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    margin-top: 1px;
     border-radius: 50%;
     background-color: green;
-    position: absolute;
 }
 
 @media(max-width: 1000px){
@@ -186,5 +185,19 @@ html, body {
         width: 90%;
         margin-top: 5%;
         margin-left: 45%;
+    }
+    .online span{
+        margin-left: 145px;
+        position: absolute;
+        margin-top: -7px;
+        font-size: 50px;
+    }
+    .ondiv{
+        width: 30px;
+        height: 30px;
+        margin-top: 5px;
+        margin-left: 100px;
+        border-radius: 50%;
+        background-color: green;
     }
 }
