--- a/public/style/style.css
+++ b/public/style/style.css
@@ -10,7 +10,7 @@ html, body {
     margin-left: 30%;
     margin-top: 2.5%;
     text-align: center;
-    color: blue;
+    color: purple;
     border-radius: 5px;
     z-index: 1;
 }
