--- a/public/style/style.css
+++ b/public/style/style.css
@@ -95,9 +95,10 @@ html, body {
     font-size: 17px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #DA81F5;
-    margin: 2%;
+    margin: 1%;
     padding: 1%;
-    height: 6%;
+    height: fit-content;
+    width: fit-content;
     color:white;
     border-radius: 5px;
 }
@@ -146,26 +147,27 @@ html, body {
         margin-left: 13%;
     }
     .user{
-        width: 70%;
+        width: 100%;
         height: 15%;
-        margin-left: 35%;
+        margin-left: 17%;
     }
     .user h1{
-        margin-top: 80%;
+        margin-top: 50%;
         font-size:50px;
         font-weight: bold;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
     .user input{
-        margin-top: 5%;
-        width: 80%;
-        height: 25%;
-        font-size: 30px;
+        margin-top: 20%;
+        width: 100%;
+        height: 40%;
+        font-size: 40px;
+        border-bottom: 5px solid purple;
     }
     .user button{
-        width: 30%;
-        height: 25%;
-        font-size: 30px;
+        width: 40%;
+        height: 30%;
+        font-size: 35px;
     }
     .chat input{
         width: 80%;
@@ -187,7 +189,7 @@ html, body {
         width: 100%;
     }
     .campo_msg li{
-        height: 5%;
+        height: 3%;
         font-size: 25px;
         overflow-x: scroll;
     }
