add scrollTo comand

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,7 +8,7 @@
         <div class="root">
             <!--Chat-->
             <div class="chat" id="divChat">
-                <div class="campo_msg">
+                <div class="campo_msg" id="campo_msg">
                     <ul class="msg" id="msg"></ul>
                 </div>
                 <form id="formmsg">
