--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,25 +5,9 @@
         <link rel="stylesheet" href="./style/style.css" />
     </head>
     <body>
-        <div class="root">
-            <!--Chat-->
-            <div class="chat" id="divChat">
-                <div class="campo_msg" id="campo_msg">
-                    <ul class="msg" id="msg"></ul>
-                </div>
-                <form id="formmsg">
-                    <input maxlength="50" type="text" id="message" />
-                    <button disabled id='sendbtn'></button>
-                </form>
-            </div>
-            <div id="online" class="online">
-                <div class="ondiv"></div><span id="users"></span>
-            </div>
-        </div>
-        <!--First Page username-->
         <div class="user" id="divUser">
             <h1>Welcome to 2112chat</h1>
-            <form id="form">
+            <form id="form" method="GET" action="/chat">
                 <input id="username" type="text" placeholder="Insert your name here" />
                 <button id="btnuser" disabled>Go to Chat</button>
             </form>
