--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -23,6 +23,6 @@
             
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="scripts/script.js"></script>
+        <script src="scripts/chat_script.js"></script>
     </body>
 </html>
