--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -20,8 +20,6 @@
             </div>
         </div>
             
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="scripts/script.js"></script>
+        <script src="scripts/index_script.js"></script>
     </body>
 </html>
