--- a/app/public/style/chat_style.css
+++ b/app/public/style/chat_style.css
@@ -3,6 +3,45 @@ html, body {
     background-color: black;
 }
 *{margin: 0;padding: 0}
+.user{
+    position: absolute;
+    width: 40%;
+    height: 90%;
+    margin-left: 30%;
+    margin-top: 2.5%;
+    text-align: center;
+    color: purple;
+    border-radius: 5px;
+    z-index: 1;
+}
+.user h1{
+    margin-top: 30%;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.user input{
+    margin-top: 5%;
+    width: 90%;
+    height: 5%;
+    font-size: 20px;
+    color: purple;
+    background-color: transparent;
+    text-align: center;
+    border: none;
+    border-bottom: 1px solid purple;
+}
+.user button{
+    margin-top: 5%;
+    width: 30%;
+    height: 5%;
+    font-size: 15px;
+    border: 2px solid gray;
+    color: gray;
+    background-color: transparent;
+    border-radius: 5px;
+    cursor: pointer;
+}
 .chat{
     position: absolute;
     width: 80%;
@@ -103,6 +142,29 @@ html, body {
 @media(max-width: 1000px){
     body{
         height: 100%;
+    }
+    .user{
+        width: 100%;
+        height: 15%;
+        margin-left: 17%;
+    }
+    .user h1{
+        margin-top: 50%;
+        font-size:50px;
+        font-weight: bold;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .user input{
+        margin-top: 20%;
+        width: 100%;
+        height: 40%;
+        font-size: 40px;
+        border-bottom: 5px solid purple;
+    }
+    .user button{
+        width: 40%;
+        height: 30%;
+        font-size: 35px;
     }
     .chat{
         width: 100%;
