--- a/src/app/public/style/chat_style.css
+++ b/src/app/public/style/chat_style.css
@@ -110,15 +110,15 @@ html, body {
     color:white;
     border-radius: 5px;
 }
-.campo_msg li span{
+.campo_msg li .name{
     color:  #6A0888;
     font-size: 20px;
+    font-weight: bold;
 }
 .campo_msg li .time{
-    color: grey;
+    color: black;
     text-align: right;
-    font-size: 12px;
-    font-weight: bold;
+    font-size: 10px;
 }
 
 .online{
