--- a/src/app/views/index.ejs
+++ b/src/app/views/index.ejs
@@ -24,7 +24,7 @@
         <div class="user" id="divUser">
             <h1>Welcome to 2112chat</h1>
             <form id="form">
-                <input id="username" type="text" placeholder="Insert your name here" />
+                <input id="username" onkeydown="unlockBtn();" type="text" placeholder="Insert your name here" />
                 <button id="btnuser" disabled>Go to Chat</button>
             </form>
             <div class="ads">
